[gd_scene load_steps=5 format=3 uid="uid://btxw207if61ck"]

[ext_resource type="Script" uid="uid://cgtlobia5qgqu" path="res://game.gd" id="1_mlf6e"]
[ext_resource type="Script" uid="uid://dc6tq20mtmga8" path="res://fog_of_war_renderer.gd" id="2_po0ka"]
[ext_resource type="Script" uid="uid://dh131ob2norqh" path="res://cloud_system.gd" id="3_mixcd"]
[ext_resource type="Script" uid="uid://bye1wlj1ludcy" path="res://sound_visualizer.gd" id="3_v1wow"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_mlf6e")

[node name="FogOfWarRenderer" type="CanvasLayer" parent="."]
script = ExtResource("2_po0ka")

[node name="CloudSystem" type="Node2D" parent="."]
script = ExtResource("3_mixcd")

[node name="SoundVisualizer" type="Node" parent="."]
script = ExtResource("3_v1wow")
